--- a/src/view/NewReportDialog.fxml
+++ b/src/view/NewReportDialog.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.92" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.NewReportDialogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.NewReportDialogController">
    <bottom>
       <HBox alignment="CENTER_RIGHT" prefWidth="600.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -35,7 +35,18 @@
             <Label text="Location" />
             <Label text="Water Type" GridPane.rowIndex="1" />
             <Label text="Water Condition" GridPane.rowIndex="2" />
-            <TextField fx:id="locationField" GridPane.columnIndex="1" />
+            <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1">
+               <children>
+                  <TextField fx:id="lattitudeField" promptText="Lattitude" />
+                  <TextField fx:id="longitudeField" promptText="Longitude" />
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </HBox>
             <ChoiceBox fx:id="waterTypeChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="waterConditionChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
